fix overflow

--- a/src/main/resources/static/css/check_lab.css
+++ b/src/main/resources/static/css/check_lab.css
@@ -60,7 +60,7 @@
     text-align: center;
     font-size: 33px;
     line-height: 65px;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .check_lab_right_form {
@@ -77,7 +77,7 @@
     text-align: center;
     font-size: 33px;
     line-height: 65px;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .check_lab_left_half_form {
